<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SelfControl</string>
    <string name="hello_world">Hello world!</string>
<<<<<<< HEAD
    <string name="action_settings">Settings</string>
    <string name="counterString">0</string>   
    <string name="mainButton1Text">Switch zu zweitem Bildschirm</string>
    <string name="startServiceButton">Service starten</string>
    <string name="getServiceData">Service Runtime abfragen</string>
    <string name="lockStatusString">lockStatus</string>
    
    <!-- Strings der zweiten Activity!: -->
    
    <string name="sekActivity">Zweiter Bildschirm_TEST</string>
    <string name="title_activity_sek">Die zweite Activity</string>
    
    <!-- Strings des Services -->
    
=======
    <string name="action_settings">Settings</string>
    <string name="counterString">0</string>
    <string name="mainButton1Text">Gesamtzeit</string>
    <string name="startServiceButton">Service starten</string>
    <string name="getServiceData">Service Runtime abfragen</string>

    <!-- Strings der zweiten Activity!: -->

    <string name="sekActivity">Zweiter Bildschirm_TEST</string>
    <string name="title_activity_sek">Die zweite Activity</string>
    <string name="GraphTitle1">nobody cares</string>
    <!-- Strings des Services -->

>>>>>>> b771387e3894916d9c490f44581fbd467c950cf0
    <string name="MyServiceLabel">MyService</string>
    
    <!-- Strings der Activity vis1!: -->
    <string name="title_activity_vis1">Visualisierung</string>
    <string name="vis1_But1">Vis1</string>
    <string name="vis1rad00">today</string>
    <string name="vis1rad01">this Week</string>
    <string name="vis1rad02">avg day</string>

</resources>
