<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counterString"/>
    
    <Button 
        android:id="@+id/mainButton1" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainButton1Text" />
    
    <Button 
        android:id="@+id/mainButton2" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainButton1Text"/>
    
    <Button 
        android:id="@+id/startServiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startServiceButton"/>
    
    <Button 
        android:id="@+id/getServiceDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getServiceData"/>
<<<<<<< HEAD
        
    <TextView
        android:id="@+id/lockStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lockStatusString"/>    
=======

>>>>>>> b771387e3894916d9c490f44581fbd467c950cf0
    

</LinearLayout>
